Add the list of code

--- a/Pages/TaskSupervisor.razor
+++ b/Pages/TaskSupervisor.razor
@@ -8,7 +8,8 @@
         <li>@task</li>
     }
 </ul>
-
+@* update the code add the content *@
 @code {
     private List<string> SupervisorTasks = new() { "Review Reports", "Assign Tasks", "Team Meeting" };
 }
+
