update the code tov check if the conflicts occur or not

--- a/Pages/TaskSupervisor.razor
+++ b/Pages/TaskSupervisor.razor
@@ -10,6 +10,13 @@
 </ul>
 @* update the code add the content *@
 @code {
-    private List<string> SupervisorTasks = new() { "Review Reports", "Assign Tasks", "Team Meeting" };
+    private List<stri
+    
+    asf]sa[fsl., sa
+        f\fps\l
+        \g\o\s\
+        gj
+        \][ng> SupervisorTasks = new() { "Review Reports", "Assign Tasks", "Team Meeting" };
+    sapofsaklf
 }
 
